# rust-playground

./: .gitignore  Cargo.toml  README.md
extract-lector/: Cargo.toml
extract-lector/src/: main.rs
helloworld/src/calc/: mod.rs
helloworld/src/mysqldb/: mod.rs  usernotfound.rs
pixels-winit-minimal-main/: Cargo.toml
show-window-with-movie/: Cargo.toml  README.md
show-window-with-movie/src/: main.rs
speech-to-text/: Cargo.toml  README.md  build.rs
speech-to-text/examples/: mic_to_console.rs  process_audio_file.rs
speech-to-text/src/: lib.rs
src/: main.rs
src/mysqldb/: mod.rs
utils/: ffmpeg-generate-video.sh
winit-pixels/: Cargo.toml
winit-pixels-raw-video/: Cargo.toml  README.md
winit-pixels-raw-video/src/: main.rs
winit-pixels/src/: main.rs
winit-softbuffer/: Cargo.toml
winit-softbuffer-ab-glyph/: Cargo.toml
winit-softbuffer-ab-glyph/src/: main.rs
winit-softbuffer-fontdue/: Cargo.toml
winit-softbuffer-fontdue/src/: main.rs
winit-softbuffer-raw-video/: Cargo.toml
winit-softbuffer-raw-video/src/: main.rs
zeroconf-client/: Cargo.toml
zeroconf-client/src/: main.rs
zeroconf-server/: Cargo.toml
zeroconf-server/src/: main.rs
